crates/vega-codegen/tests/compile_errors/negative_first_argument.rs
vega_codegen::algebra!(-1);

fn main() {
    eprintln!("This is nothing");
}
